--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ repositories {
         name "Terraformers"
         url "https://maven.terraformersmc.com/"
     }
+    maven {
+        name "Wisp Forest"
+        url "https://maven.wispforest.io/releases/"
+    }
 }
 
 dependencies {
@@ -41,6 +45,8 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
     modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    modImplementation "io.wispforest:owo-lib:${project.owo_version}"
+    include "io.wispforest:owo-sentinel:${project.owo_version}"
 }
 
 processResources {
