--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ archives_base_name=Wingcrafter
 fabric_version=0.136.0+1.21.10
 yacl_version=3.8.0+1.21.9-fabric
 modmenu_version=16.0.0-rc.1
+owo_version=0.12.24+1.21.9
