--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,25 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+    org.gradle.jvmargs=-Xmx1G
+
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.2
-loader_version=0.17.3
+    minecraft_version=1.21.10
+    yarn_mappings=1.21.10+build.2
+    loader_version=0.17.3
+
 # Mod Properties
-mod_version=1.0.0
-maven_group=org.aussiebox
-archives_base_name=Wingcrafter
+    mod_version=1.0.0
+    maven_group=org.aussiebox
+    archives_base_name=Wingcrafter
+
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.136.0+1.21.10
-yacl_version=3.8.0+1.21.9-fabric
-modmenu_version=16.0.0-rc.1
-owo_version=0.12.24+1.21.9
+    fabric_version=0.136.0+1.21.10
+    yacl_version=3.8.0+1.21.9-fabric
+    modmenu_version=16.0.0-rc.1
+    owo_version=0.12.24+1.21.9
+    cca_version=7.2.0
+
+# DevAuth
+    devauth_module=fabric
+    devauth_version=1.2.2
