Split Sources + Cleanup
yo this shit is crashing me whar

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,18 @@ plugins {
 
 fabricApi {
     configureDataGeneration() {
-        client = true
+        client = false
+    }
+}
+
+loom {
+    splitEnvironmentSourceSets()
+
+    mods {
+        wingcrafter {
+            sourceSet sourceSets.main
+            sourceSet sourceSets.client
+        }
     }
 }
 
